compiler/testData/diagnostics/tests/multiplatform/hmpp/kt-55570.kt
// FIR_IDENTICAL
// MODULE: common
// TARGET_PLATFORM: Common

// MODULE: main()()(common)
actual class <!ACTUAL_WITHOUT_EXPECT!>A<!>
